# cpp-library-template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  class_my_library_1_1_example-members.html  class_my_library_1_1_example.html  classes.html  conanfile.py  custom.css  dir_42e58c5615e174c99b3873cba1f46d84.html  dir_42e58c5615e174c99b3873cba1f46d84.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5a30104352ef4255dc24354b02eb2d20.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9738dac6e012e132f14c3619f011c45b.html  dir_9738dac6e012e132f14c3619f011c45b.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  example-page_8dox.html  example_8hpp.html  example_8hpp_source.html  files.html  functions.html  functions_func.html  index.html  namespace_my_library.html  namespaces.html  navtreedata.js  navtreeindex0.js  page1.html  pages.html
.github/workflows/: configureBuildTestCreateAndUpload.yaml  publish-pages.yaml
cmake/modules/: GetVersion.cmake
docs/doxygen-custom/: custom.css  header.html
lib/: CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_0.js  files_0.js  functions_0.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js
src/: CMakeLists.txt  example.cpp
src/include/MyLibrary/: example.hpp
test/: CMakeLists.txt  mylibrarytest.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
